--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,11 @@ footer {
     background-color: navy;
 }
 
-h1,h2,h5 {
+footer h5 {
+    color: aliceblue;
+}
+
+h1,h2 {
     margin: 0;
     color: aliceblue;
 }
